--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> 
-    <link rel="stylesheet" href="/css/portfolio projects/todo-list.css">
+    <link rel="stylesheet" href=todo-list.css">
     <title>Todo list</title>
 </head>
 <body>
@@ -55,5 +55,5 @@
    </main> 
    
 </body>
-<script src="/js/portfolio projects/todo-list.js" defer></script>
+<script src="todo-list.js" defer></script>
 </html>
